# debmake

./: MANIFEST  MANIFEST.in  PKG-INFO  README  README.developer  README.md  TODO  copyright  git-clean  pyproject.toml  setenv  setup.cfg  setup.py
debian/: README.Debian  changelog  control  copyright  debmake.lintian-overrides  rules  watch
debian/patches/: 0001-Sanity-check-for-copyright-lines.patch  0001-space-tab.patch  0002-Update-template-for-autogen.sh.patch  0002-rules-chmod-755.patch  0003-Work-around-os.getlogin-769392.patch  0003-package-name-if-null.patch  0004-Doc-updates-765579.patch  0004-python3.patch  debian-changes  series
debian/source/: lintian-overrides  patch-header
debian/tests/: control  testcode1.sh  testcode2.sh
debmake/: __init__.py  analyze.py  cat.py  changelog.py  checkdep5.py  compat.py  control.py  copyright.py  debian.py  debs.py  debug.py  dist.py  gen.py  grep.py  install.py  kludge.py  lc.py  local_options.py  origtar.py  para.py  read.py  readme_debian.py  rules.py  sanity.py  scanfiles.py  sed.py  src.py  tar.py  untar.py  watch.py  yn.py
doc/: EXPERIMENTAL  RATIONALE  README.multi  README.option  README.tutorial  TUTORIAL  debmake.html  examples.tar.xz  maint-guide.html
extra/: copyright.LGPL-2.0+.ex  copyright.MIT.ex  package.cron.d.ex  package.doc-base.ex  package.init.d.ex  prerm.ex
extra0/: rules
extra0desc/: _short  data  dbg  dev  doc  lib  perl  python  python3  ruby
extra0desc_long/: _long  bin  data  dbg  dev  doc  lib  perl  python  python3  ruby  script
extra0export/: cflags  cmake  compiler  java  vala
extra0normal/: rules
extra0override/: autogen  autoreconf  cmake  dbg  dbg1  dbg2  java  judge  multiarch  python3  pythons
extra0python3/: rules
extra1/: README.Debian  watch
extra1patches/: series
extra2bin/: package.install
extra2binall/: package.info  package.install
extra2data/: package.install
extra2dbg/: package.install
extra2dev/: package.install
extra2doc/: package.doc-base  package.docs  package.examples  package.info  package.install  package.manpages
extra2lib/: package.install  package.symbols
extra2multi/: clean  package.links  package.menu  package.postinst  package.postrm  package.preinst  package.prerm
extra2single/: clean  install  links  menu  package.install  postrm  preinst
extra3/: manpage.1.ex  manpage.xml.ex
extra5/xorg/: Makefile  list.txt  split
manpages/: debmake.1
scripts/: debmake
src/debmake/: __init__.py  __main__.py  analyze.py  cat.py  checkdep5.py  cli.py  compat.py  control.py  copyright.py  debian.py  debs.py  debug.py  dist.py  grep.py  kludge.py  lc.py  origtar.py  para.py  read.py  sanity.py  scanfiles.py  sed.py  tar.py  untar.py  yn.py
src/extra0/: rules
src/extra0desc_long/: nodejs
src/extra0override/: pythons
src/extra1sourcex/: local-options  options  patch-header
src/extra3/: manpage.md.ex
src/extra4/: LGPL-2.1+
test/: .FULL_LICENSE.KEEP  .LICENSE.KEEP  @intel-efi0.txt  @main.c.txt  @oldfsf.c.txt  @openssl-code.txt  AGPL-1.0_FULL.txt  AGPL-3.0+.txt  AGPL-3.0.txt  AGPL-3.0_FULL.txt  APSL-1.0.txt  APSL-1.1.txt  APSL-1.2.txt  APSL-2.0.txt  Apache-1.0.txt  Apache-1.1.txt  Apache-2.0_var1.txt  Apache-2.0_var2.txt  BSD-2-Clause-FreeBSD.txt  BSD-2-Clause-NetBSD.txt  BSD-2-Clause.txt  BSD-3-Clause-Clear.txt  BSD-3-Clause.txt  BSD-4-Clause-UC.txt  BSD-4-Clause.txt  BSL-1.0.txt  GFDL-1.1+.txt  GFDL-1.1.txt  GFDL-1.1_FULL.txt  GFDL-1.2+.txt  GFDL-1.2.txt  GFDL-1.2_FULL.txt  GFDL-1.3+.txt  GFDL-1.3.txt  GFDL-1.3_FULL.txt  GPL-1.0+.txt  GPL-1.0+_FULL.txt  GPL-1.0.txt  GPL-2.0+.txt  GPL-2.0+_FULL.txt  (+112 more)
test/base/hello-c-1.5/: configure.ac
test/doc/: 00-preface.txt  00-terms.txt  01-preface.txt  01-quick.txt  10-prereq.txt  10-workflow.txt  11-version.txt  12-build.txt  12-rules.txt  13-control.txt  13-library.txt  14-changelog.txt  15-copyright.txt  16-debianconf.txt  17-customize.txt  18-build.txt  19-debug.txt  19-reminders.txt  20-setups.txt  20-symbols.txt  20-toolsetup.txt  21-multiarch.txt  21-siglepkg.txt  22-harden.txt  22-patchpkg.txt  23-multipkg.txt  24-autotools.txt  25-python.txt  30-simpledeb.txt  30-tips.txt  40-tooltips.txt  40-workflow.txt  41-toolsetup.txt  42-rules.txt  42-sourcetips.txt  43-control.txt  44-boption.txt  45-changelog.txt  46-copyright.txt  47-debconfig.txt  (+47 more)
test/hello-1.1/: step112.cmd  step200.cmd  step401.cmd  step402.cmd  step410.cmd  step420.cmd  step430.cmd
test/hello-c-0.0/: step000.cmd  step200.cmd
test/hello-c-0.9/: step102.cmd  step300.cmd  step301.cmd
test/hello-c-0.9_q/: step000.cmd  step300.cmd  step301.cmd  step302.cmd  step500.cmd
test/hello-c-1.0/: Makefile  step001.cmd  step110.cmd
test/hello-c-1.0_a/: step400.cmd
test/hello-c-1.0_ai/: step200.cmd
test/hello-c-1.0_aidbg/: step000.cmd  step200.cmd  step400.cmd  step401.cmd  step402.cmd  step410.cmd  step421.cmd  step422.cmd  step430.cmd  step500.cmd
test/hello-c-1.0_t/: step000.cmd  step200.cmd  step500.cmd  step600.cmd  step800.cmd
test/hello-c-1.0_ti/: step000.cmd  step200.cmd
test/hello-c-1.5/: step000.cmd  step104.cmd
test/hello-c-1.5_a/: step000.cmd  step200.cmd
(+704 files in other folders)
