[metadata]
name = debmake
version = attr: debmake.__version__
description = Debian package making utility
long_description = file: README.md
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Topic :: Utilities
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: POSIX :: Linux
	Natural Language :: English
author = Osamu Aoki
author_email = osamu@debian.org
maintainer = Osamu Aoki
maintainer_email = osamu@debian.org
url = https://salsa.debian.org/debian/debmake
project_urls =
	Documentation = https://salsa.debian.org/debian/debmake
keywords = debmake
license = MIT

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.4
setup_requires = setuptools >= 51

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	debmake = debmake.__main__:main
	debmake-lc = debmake.lc:lc_main
	debmake-dep5 = debmake.checkdep5:checkdep5_main

[options.data_files]
	share/debmake/extra0 =
		src/extra0/changelog
		src/extra0/rules
	share/debmake/extra0desc_long =
		src/extra0desc_long/_long
		src/extra0desc_long/_long_tutorial
		src/extra0desc_long/bin
		src/extra0desc_long/data
		src/extra0desc_long/dev
		src/extra0desc_long/doc
		src/extra0desc_long/lib
		src/extra0desc_long/perl
		src/extra0desc_long/python
		src/extra0desc_long/python3
		src/extra0desc_long/ruby
		src/extra0desc_long/script
	share/debmake/extra0export =
		src/extra0export/compiler
		src/extra0export/java
		src/extra0export/misc
		src/extra0export/vala
	share/debmake/extra0override =
		src/extra0override/autogen
		src/extra0override/autoreconf
		src/extra0override/cmake
		src/extra0override/java
		src/extra0override/judge
		src/extra0override/makefile
		src/extra0override/multiarch
		src/extra0override/pythons
	share/debmake/extra1 =
		src/extra1/README.Debian
		src/extra1/watch
	share/debmake/extra1patches = src/extra1patches/series
	share/debmake/extra1source = src/extra1source/format
	share/debmake/extra1sourcex =
		src/extra1sourcex/local-options
		src/extra1sourcex/options
		src/extra1sourcex/patch-header
	share/debmake/extra1tests = src/extra1tests/control
	share/debmake/extra1upstream = src/extra1upstream/metadata
	share/debmake/extra2bin = src/extra2bin/package.install
	share/debmake/extra2data = src/extra2data/package.install
	share/debmake/extra2dev = src/extra2dev/package.install
	share/debmake/extra2doc =
		src/extra2doc/package.doc-base
		src/extra2doc/package.docs
		src/extra2doc/package.examples
		src/extra2doc/package.info
		src/extra2doc/package.install
		src/extra2doc/package.manpages
	share/debmake/extra2lib =
		src/extra2lib/package.install
		src/extra2lib/package.symbols
	share/debmake/extra2multi =
		src/extra2multi/clean
		src/extra2multi/package.links
		src/extra2multi/package.postinst
		src/extra2multi/package.postrm
		src/extra2multi/package.preinst
		src/extra2multi/package.prerm
	share/debmake/extra2single =
		src/extra2single/clean
		src/extra2single/install
		src/extra2single/links
		src/extra2single/postinst
		src/extra2single/postrm
		src/extra2single/preinst
		src/extra2single/prerm
	share/debmake/extra3 =
		src/extra3/compat.ex
		src/extra3/manpage.1.ex
		src/extra3/manpage.asciidoc.ex
		src/extra3/manpage.sgml.ex
		src/extra3/manpage.xml.ex
		src/extra3/package.bug-control.ex
		src/extra3/package.bug-presubj.ex
		src/extra3/package.bug-script.ex
		src/extra3/package.conffiles.ex
		src/extra3/package.cron.d.ex
		src/extra3/package.cron.daily.ex
		src/extra3/package.cron.hourly.ex
		src/extra3/package.cron.monthly.ex
		src/extra3/package.cron.weekly.ex
		src/extra3/package.default.ex
		src/extra3/package.dirs.ex
		src/extra3/package.emacsen-install.ex
		src/extra3/package.emacsen-remove.ex
		src/extra3/package.emacsen-startup.ex
		src/extra3/package.init.ex
		src/extra3/package.lintian-overrides.ex
		src/extra3/package.service.ex
		src/extra3/package.tmpfile.ex
		src/extra3/package.upstart.ex
		src/extra3/source.lintian-overrides.ex
	share/debmake/extra4 =
		src/extra4/Apache-2.0
		src/extra4/Artistic-1.0
		src/extra4/BSD-3-Clause
		src/extra4/Expat
		src/extra4/GPL-2.0+
		src/extra4/GPL-3.0+
		src/extra4/LGPL-2.1+
		src/extra4/LGPL-3.0+
	lib/debmake =
		src/desc/META.yml.short
		src/desc/Rakefile.short
		src/desc/python.long
		src/desc/python.short
		src/desc/python3.long
		src/desc/python3.short
		src/desc/specin.long
		src/desc/specin.short

